# kinesis-teensy

./: .gitignore  .gitmodules
cca/: .gitignore
cca/teensy-cca/: teensy-cca.kicad_pcb  teensy-cca.pro  teensy-cca.pro~  teensy-cca.rules  teensy-cca.sch
firmware/: .gitignore
firmware/test/: .gitignore  CMakeLists.txt  make.sh  program.sh
firmware/test/src/: kinesis_teensy_test.cpp  src<test>
